fix: sidebar collapse issue fixed

--- a/components/general/sidebar/bar/Sidebar.css
+++ b/components/general/sidebar/bar/Sidebar.css
@@ -84,7 +84,8 @@ display: block
     transform: rotate(-180deg);
 }
 
-.sidebar.close .nav-links i.arrow{
+.sidebar.close .nav-links i.arrow,
+.sidebar.close .nav-links .link_name{
     display: none;
 }
 
